tests/good/type_check.lat
int main() {
    int a;
    boolean b;
    string c;

    return 0;
}

void f() {

}