tests/bad/structs/6.lat
class A
{
    int a;
}

int main() {
    A[] a = new A;
    return 0;
}